--- a/index.html
+++ b/index.html
@@ -29,10 +29,81 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!--start Hour-->
+      <div id="hour-9" class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-10" class="row time-block">
+        <div class="col-md-1 hour">10AM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-11" class="row time-block">
+        <div class="col-md-1 hour">11AM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-12" class="row time-block">
+        <div class="col-md-1 hour">12PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-13" class="row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-14" class="row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-15" class="row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-16" class="row time-block">
+        <div class="col-md-1 hour">4PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
+
+      <!--start Hour-->
+      <div id="hour-17" class="row time-block">
+        <div class="col-md-1 hour">5PM</div>
+        <textarea class="col-md-10 description present" ></textarea>
+        <button class="col-md-1 btn saveBtn"><i class="far fa-save"></i></button>
+      </div>
+      <!--end Hour-->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
